# origin

./: .gitignore  Shapes2.sln  Shapes2.vcxproj  main.cpp
Course/: .gitignore
Course/RaceLibrary/: AirTransport.cpp  AirTransport.h  LandTransport.cpp  LandTransport.h  Race.cpp  Race.h  RaceLibrary.vcxproj  Transport.cpp  Transport.h  pch.h
Course/RaceSimulator/: RaceSimulator.vcxproj  main.cpp
Course/RaceSimulatorSolution/: RaceSimulatorSolution.sln  RaceSimulatorSolution.vcxproj
CourseProject/Codes/: RaceSimulator.cpp  race_simulator.cpp  race_simulator.h
Lesson1/Task1/Month/: Month.cpp  Month.sln  Month.vcxproj  Month.vcxproj.filters
Lesson1/Task2/BankAccount/: BankAccount.cpp  BankAccount.sln  BankAccount.vcxproj  BankAccount.vcxproj.filters
Lesson1/Task3/Address/: Address.cpp  Address.sln  Address.vcxproj  Address.vcxproj.filters
Lesson10/Task1/my_first_cmake_project/: .gitignore  CMakeLists.txt  my_first_cmake_project.cpp  my_first_cmake_project.h
Lesson10/Task2/FigureProject/: CMakeLists.txt  EquilateralTriangle.cpp  EquilateralTriangle.h  FigureProject.cpp  FigureProject.h  IsoscelesTriangle.h  Quadrilateral.h  Square.cpp  Triangle.h  myRectangle.cpp
Lesson10/Task2/Homework1/: .gitignore  Homework1.cpp  Homework1.vcxproj
Lesson10/Task2/Homework2/: .gitignore  EquilateralTriangle.cpp  Homework2.cpp  Homework2.vcxproj  InvalidFigureException.h  IsoscelesTriangle.cpp  Quadrilateral.cpp  Quadrilateral.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Triangle.cpp  Triangle.h  (+2 more)
MnogopotocnostHW1/: MnogopotocnostHW1.cpp  MnogopotocnostHW1.sln  MnogopotocnostHW1.vcxproj  MnogopotocnostHW1.vcxproj.filters
MnogopotocnostHW2/: .gitignore  MnogopotocnostHW2.cpp  MnogopotocnostHW2.sln  MnogopotocnostHW2.vcxproj
x64/Debug/: Shapes2.exe.recipe  Shapes2.ilk  Shapes2.vcxproj.FileListAbsolute.txt
(+292 files in other folders)
